--- a/css/guest-homepage.css
+++ b/css/guest-homepage.css
@@ -29,6 +29,88 @@
     padding:50px 0;
     background:#fff;
     }
+/* aboutUs */
+#aboutUs{
+    padding: 60px 0;
+    background-color: #f0f0f0;
+}
+#content #heading{
+    text-align: center;
+    padding-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 50px;
+}
+.heading1{
+    margin: 20px 10px 0 0;
+}
+.heading2{
+    font-size: 1.2rem;
+    color: #858585;
+    line-height: 22px;
+}
+.card{
+    text-align: center;
+}
+.intro-img{
+    justify-content: center;
+}
+
+.card-text{
+    background-color: #f0f0f0;
+    font-size: 15px;
+    color: #777777;
+    padding: 20px;
+    margin: 0px;
+}
+.item1{
+    
+    background-color: #ffffff;
+    background:#fff;
+    padding:20px 10px;
+}
+.item1 h3{
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 24px;
+}
+.card-body{
+    padding: 0;
+}
+
+#icon1{
+    height: 58px;
+    font-size: 58px;
+    line-height: 58px;
+    padding-top: 25px;
+    color: #5e5e5e;
+}
+#icon2{
+    height: 58px;
+    font-size: 58px;
+    line-height: 58px;
+    padding-top: 25px;
+    color: #5e5e5e;
+}
+#icon3{
+    height: 58px;
+    font-size: 58px;
+    line-height: 58px;
+    padding-top: 25px;
+    color: #5e5e5e;
+}
+/* maxim */
+.ag-parlex {
+    padding-top: 0px;
+    background-image: url('../imgs/banner-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.bg {
+    padding: 30px 0;
+    background-color: rgba(0, 0, 0, 0.37);
+    color: #FDFDFD !important;
+}
 /* skill */
 .myskill{
     padding: 60px 0;
@@ -56,6 +138,30 @@
 }
 .col-sm-6 .row .col-md-8 {
     padding: 0 15px 0 15px;
+}
+/* contactUs */
+
+
+#contactUs{
+    padding: 60px 0;
+    background-color:#f0f0f0 ;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.form-group{
+    padding-bottom: 15px;
+}
+/* footer */
+footer{
+    padding: 45px 0;
+}
+.social a:hover {
+    color: #c0392b;
+}
+.social a {
+    padding: 0 10px;
+    font-size: 32px;
+    color: #c7c7c7;
 }
 
 
