--- a/css/guest-homepage.css
+++ b/css/guest-homepage.css
@@ -17,7 +17,7 @@
     color: white;
 }
 #navbar-container{padding: 0px;}
-.navbar .container-fluid img{
+.navbar .container img{
     width: 150px;
 } 
 
