--- a/css/guest-homepage.css
+++ b/css/guest-homepage.css
@@ -1,10 +1,10 @@
-
 /*  */
-.nav-link{
+.nav-link {
     color: white !important;
     text-transform: uppercase;
     font-size: 15px;
 }
+
 .navbar {
     background-color: #CC4646;
     position: fixed;
@@ -13,91 +13,109 @@
     border-radius: 0;
     top: 0px;
 }
-.navbar .navbar-toggler-icon span{
+
+.navbar .navbar-toggler-icon span {
     color: white;
 }
-#navbar-container{padding: 0px;}
-.navbar .container img{
-    width: 150px;
-} 
 
-/*  */
-#carouselExampleControls{
+#navbar-container {
     padding: 0px;
 }
+
+.navbar .container img {
+    width: 150px;
+}
+
+/*  */
+#carouselExampleControls {
+    padding: 0px;
+}
+
 #introText {
-    padding:50px 0;
-    background:#fff;
-    }
+    padding: 50px 0;
+    background: #fff;
+}
+
 /* aboutUs */
-#aboutUs{
+#aboutUs {
     padding: 60px 0;
     background-color: #f0f0f0;
 }
-#content #heading{
+
+#content #heading {
     text-align: center;
     padding-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 50px;
 }
-.heading1{
+
+.heading1 {
     margin: 20px 10px 0 0;
 }
-.heading2{
+
+.heading2 {
     font-size: 1.2rem;
     color: #858585;
     line-height: 22px;
 }
-.card{
+
+.card {
     text-align: center;
 }
-.intro-img{
+
+.intro-img {
     justify-content: center;
 }
 
-.card-text{
+.card-text {
     background-color: #f0f0f0;
     font-size: 15px;
     color: #777777;
     padding: 20px;
     margin: 0px;
 }
-.item1{
-    
+
+.item1 {
+
     background-color: #ffffff;
-    background:#fff;
-    padding:20px 10px;
+    background: #fff;
+    padding: 20px 10px;
 }
-.item1 h3{
+
+.item1 h3 {
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: 24px;
 }
-.card-body{
+
+.card-body {
     padding: 0;
 }
 
-#icon1{
+#icon1 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
 }
-#icon2{
+
+#icon2 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
 }
-#icon3{
+
+#icon3 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
 }
+
 /* maxim */
 .ag-parlex {
     padding-top: 0px;
@@ -106,20 +124,24 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
 .bg {
     padding: 30px 0;
     background-color: rgba(0, 0, 0, 0.37);
     color: #FDFDFD !important;
 }
+
 /* skill */
-.myskill{
+.myskill {
     padding: 60px 0;
 }
+
 .skilllevel {
     text-align: right;
     font-weight: 600;
     padding-right: 0px;
 }
+
 .progress {
     border-radius: 0px;
     height: 15px;
@@ -128,166 +150,256 @@
     margin-top: 5px;
     margin-bottom: 20px;
 }
+
 .progress .progress-bar {
-    background-color: #CC4646;}
-.skillp{
+    background-color: #CC4646;
+}
+
+.skillp {
     color: #858585;
 }
-#cot1{
-    padding-left:15px ;
+
+#cot1 {
+    padding-left: 15px;
 }
+
 .col-sm-6 .row .col-md-8 {
     padding: 0 15px 0 15px;
 }
 
-/* protily*/
+/* Experience */
+#timeline {
+    list-style: none;
+    position: relative;
+}
+
+#timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 2px;
+    background-color: #CC4646;
+    left: 50%;
+    margin-left: -1.5px;
+}
+
+#timeline .clearFix {
+    clear: both;
+    height: 0;
+}
+
+#timeline .timeline-badge {
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    font-size: 1.2em;
+    text-align: center;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #CC4646;
+    z-index: 36;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+
+#timeline .timeline-badge.timeline-future-movement {
+    background-color: #ffffff;
+    height: 35px;
+    width: 35px;
+    font-size: 1.7em;
+    top: -16px;
+    margin-left: -18px;
+}
+
+#timeline .timeline-badge.timeline-future-movement a span {
+    color: #CC4646;
+    font-size: .9em;
+    top: 2px;
+    left: 1px;
+}
+
+#timeline .timeline-movement {
+    border-bottom: dashed 1px #CC4646;
+    position: relative;
+}
+
+#timeline .timeline-movement.timeline-movement-top {
+    height: 60px;
+}
+
+#timeline .timeline-movement .timeline-item {
+    padding: 60px 0;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel {
+    border: 1px solid #d4d4d4;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    color: #666;
+    padding: 10px;
+    position: relative;
+
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    margin-left: 54px;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
+    text-align: right;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
+    color: #666;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
+    color: #468c1f;
+    font-size: 1.3em;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
+    text-align: left;
+}
+
+#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul span.importo {
+    color: #e2001a;
+    font-size: 1.3em;
+}
+
+/* portfolio */
 .isotopeWrapper article {
     margin-bottom: 30px;
-}
-
-#portfolio {
-    background:rgb(24, 24, 24);
-}
-
-    #portfolio img {
-        width: 100%;
-    }
-
-    #portfolio article p {
-        margin-bottom: 1.45em;
-        /*set next row on the baseline*/;
-    }
-
-nav#filter {
-    margin-bottom: 1.5em;
-}
-
-    nav#filter li {
-        display: inline-block;
-        margin: 0 0 0 5px;
-    }
-
-    nav#filter a {
-        padding: 4px 12px;
-        line-height: 20px;
-        border: 1px solid #CC4646;
-        text-decoration: none;
-    }
-
-.current {
+  }
+  
+  #portfolio {
+    background: rgb(24, 24, 24);
+  }
+  
+  #portfolio img {
+    width: 100%;
+  }
+  
+  #portfolio article p {
+    margin-bottom: 1.45em;
+    
+  }
+  
+  .current {
     background: #CC4646;
     color: #fff;
-}
-
-.portfolio-items article img {
+  }
+  
+  .portfolio-items article img {
     width: 100%;
-}
-
-.portfolio-item {
+  }
+  
+  .portfolio-item {
     display: block;
     position: relative;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-
-    .portfolio-item img {
-        -webkit-transition: all 300ms linear;
-        -moz-transition: all 300ms linear;
-        -o-transition: all 300ms linear;
-        -ms-transition: all 300ms linear;
-        transition: all 300ms linear;
-    }
-
-    .portfolio-item .portfolio-desc {
-        display: block;
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        left: 0;
-        top: 0;
-        color: rgba(220, 220, 220);
-    }
-
-.fancybox-overlay {
+  }
+  
+  
+  
+  .portfolio-item .portfolio-desc {
+    display: block;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    color: rgba(220, 220, 220);
+  }
+  
+  .fancybox-overlay {
     background: rgba(0, 0, 0, 0.64);
-}
-
-.portfolio-item:hover .portfolio-desc {
+  }
+  
+  .portfolio-item:hover .portfolio-desc {
     padding-top: 20%;
     height: 100%;
-    transition: all 200ms ease-in-out 0s;
     opacity: 1;
     background: rgba(61, 61, 61, 0.67);
-}
-
-.portfolio-item .portfolio-desc a {
+  }
+  
+  .portfolio-item .portfolio-desc a {
     color: #fff;
     text-align: center;
     display: block;
-}
-
-    .portfolio-item .portfolio-desc a:hover {
-        /*text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);*/
-        text-decoration: none;
-    }
-
-.portfolio-item .portfolio-desc .folio-info {
+  }
+  
+  .portfolio-item .portfolio-desc a:hover {
+    text-decoration: none;
+  }
+  
+  .portfolio-item .portfolio-desc .folio-info {
     top: -20px;
     padding: 30px;
     height: 0;
     opacity: 0;
     position: relative;
-}
-
-.portfolio-item:hover .folio-info {
+  }
+  
+  .portfolio-item:hover .folio-info {
     height: 100%;
     opacity: 1;
-    transition: all 500ms ease-in-out 0s;
     top: 5px;
-}
-
-.portfolio-item .portfolio-desc .folio-info h5 {
+  }
+  
+  .portfolio-item .portfolio-desc .folio-info h5 {
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
     font-size: 1.4em;
-}
-
-.portfolio-item .portfolio-desc .folio-info p {
+  }
+  
+  .portfolio-item .portfolio-desc .folio-info p {
     color: #ffffff;
     font-size: 12px;
-}
-.portfolio-items.isotopeWrapper.clearfix{
+  }
+  
+  .portfolio-items.isotopeWrapper.clearfix {
     display: contents !important;
-}
-#portfolio img {
+  }
+  
+  #portfolio img {
     width: 94%;
-}
+  }
+
 /* contactUs */
 
 
-#contactUs{
+#contactUs {
     padding: 60px 0;
-    background-color:#f0f0f0 ;
+    background-color: #f0f0f0;
     align-items: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.form-group{
+
+.form-group {
     padding-bottom: 15px;
 }
+
 /* footer */
-footer{
+footer {
     padding: 45px 0;
 }
+
 .social a:hover {
     color: #c0392b;
 }
+
 .social a {
     padding: 0 10px;
     font-size: 32px;
     color: #c7c7c7;
 }
-
-
