--- a/css/admin.css
+++ b/css/admin.css
@@ -1,46 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,500&display=swap');
-*{
-    font-family: 'Poppins', sans-serif;
-    padding:0;
-    margin:0;
+body {
+    color: #566787;
+    background-image: -webkit-linear-gradient(0deg, #df5f7d 0%, #0dd3f2 100%);
+    font-family: 'Varela Round', sans-serif;
+    font-size: 13px;
 }
 
-.name{
-    width: 100%;
-    height: 10vh;
-    background:rgb(226, 100, 100);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.logo {
+    color: white !important;
+    font-size: 24px;
+    text-transform: uppercase;
 }
-span {
-    font-size:50px;
-    margin:0px 10px;
-    font-weight: bold;
-    transition:color 0.4s;
-}
-.change-properties{
-    color:#fff;
-    text-shadow:0px 0px 10px white,0px 0px 15px white,0px 0px 20px white;
-}body{
-    background-color: darkgray;
-}
-.title{
-    
+
+.nav-link {
+    color: white !important;
+    text-transform: uppercase;
     font-size: 20px;
-    padding-top: 10px;
-    margin-top: 10px;
 }
-h1{
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+
+.table-wrapper {
+    background: #fff;
+    padding: 20px 25px;
+    margin: 30px 0;
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+
+}
+
+.table-title {
+    padding-bottom: 15px;
+    background: #435d7d;
+    color: #fff;
+    padding: 16px 30px;
+    margin: -20px -25px 10px;
+    border-radius: 3px 3px 0 0;
+}
+
+.table-title h2 {
+    margin: 5px 0 0;
+    font-size: 24px;
+}
+
+.table-title .btn-group {
+    float: right;
+}
+
+.table-title .btn {
+    color: #fff;
+    float: right;
+    font-size: 13px;
+    border: none;
+    min-width: 50px;
+    border-radius: 2px;
+    border: none;
+    outline: none !important;
+    margin-left: 10px;
+}
+
+.table-title .btn i {
+    float: left;
+    font-size: 21px;
+    margin-right: 5px;
+}
+
+.table-title .btn span {
+    float: left;
+    margin-top: 2px;
+}
+
+table.table tr th,
+table.table tr td {
+    border-color: #e9e9e9;
+    padding: 12px 15px;
+
+}
+
+table.table tr th:first-child {
+    width: 60px;
+}
+
+table.table tr th:last-child {
+    width: 100px;
+}
+
+table.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #fcfcfc;
+}
+
+table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+}
+
+table.table th i {
+    font-size: 13px;
+    margin: 0 5px;
+
+}
+
+table.table td:last-child i {
+    font-size: 22px;
+    margin: 0 5px;
+}
+
+table.table td a {
     font-weight: bold;
+    color: #566787;
+    display: inline-block;
+    text-decoration: none;
 }
-h5{
-    text-align: center;
+
+table.table td a:hover {
+    color: #2196F3;
 }
-.col{
-    padding-top:50px;
-    display: flex;
-    justify-content: center;
+
+table.table td a.edit {
+    color: #FFC107;
+}
+
+table.table td a.delete {
+    color: #F44336;
 }
