--- a/css/CV-TranNgocBinh.css
+++ b/css/CV-TranNgocBinh.css
@@ -1,179 +1,209 @@
-/*  */
+/*navbar  */
 .nav-link {
     color: white !important;
     text-transform: uppercase;
     font-size: 15px;
-}
-
-.navbar {
+  }
+  
+  .navbar {
     background-color: #CC4646;
     position: fixed;
     width: 100%;
-    z-index: 10;
+    z-index: 50;
     border-radius: 0;
     top: 0px;
-}
-
-.navbar .navbar-toggler-icon span {
+  
+  }
+  
+  .navbar .navbar-toggler-icon span {
     color: white;
-}
-
-#navbar-container {
+  }
+  
+  #navbar-container {
     padding: 0px;
-}
-
-.navbar .container img {
+  }
+  
+  .navbar .container img {
     width: 150px;
-}
-
-/*  */
-#carouselExampleControls {
-    padding: 0px;
-}
-
-#introText {
+  }
+  
+  /*carousel  */
+  .carousel-item {
+    margin-top: 60px;
+  }
+  
+  #home {
+    position: relative;
+  }
+  
+  #banner-content {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    margin: 0 auto;
+  }
+  
+  #banner-content h2 {
+    position: absolute;
+    top: 150px;
+    left: 300px;
+    z-index: 10px;
+  }
+  
+  #banner-content p {
+    position: absolute;
+    top: 200px;
+    left: 300px;
+    text-transform: uppercase;
+  }
+  
+  #introText {
     padding: 50px 0;
     background: #fff;
-}
-
-/* aboutUs */
-#aboutUs {
+  }
+  
+  /* aboutUs */
+  #aboutUs {
     padding: 60px 0;
     background-color: #f0f0f0;
-}
-
-#content #heading {
+  }
+  
+  #content #heading {
     text-align: center;
     padding-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 50px;
-}
-
-.heading1 {
+  }
+  
+  .heading1 {
     margin: 20px 10px 0 0;
-}
-
-.heading2 {
+  }
+  
+  .heading2 {
     font-size: 1.2rem;
     color: #858585;
     line-height: 22px;
-}
-
-.card {
+  }
+  
+  .card {
     text-align: center;
-}
-
-.intro-img {
+  }
+  
+  .intro-img {
     justify-content: center;
-}
-
-.card-text {
+  }
+  
+  .card-text {
     background-color: #f0f0f0;
     font-size: 15px;
     color: #777777;
     padding: 20px;
     margin: 0px;
-}
-
-.item1 {
-
+  }
+  
+  .item1 {
+  
     background-color: #ffffff;
     background: #fff;
     padding: 20px 10px;
-}
-
-.item1 h3 {
+  }
+  
+  .item1 h3 {
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: 24px;
-}
-
-.card-body {
+  }
+  
+  .card-body {
     padding: 0;
-}
-
-#icon1 {
+  }
+  
+  #icon1 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
-}
-
-#icon2 {
+  }
+  
+  #icon2 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
-}
-
-#icon3 {
+  }
+  
+  #icon3 {
     height: 58px;
     font-size: 58px;
     line-height: 58px;
     padding-top: 25px;
     color: #5e5e5e;
-}
-
-/* maxim */
-.ag-parlex {
+  }
+  
+  /* maxim */
+  .ag-parlex {
     padding-top: 0px;
     background-image: url('../imgs/banner-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
-
-.bg {
+  }
+  
+  .bg {
     padding: 30px 0;
     background-color: rgba(0, 0, 0, 0.37);
     color: #FDFDFD !important;
-}
-
-/* skill */
-.myskill {
+  }
+  
+  .secPad {
+    padding: 60px 0px;
+  }
+  
+  /* skill */
+  .myskill {
     padding: 60px 0;
-}
-
-.skilllevel {
+  }
+  
+  .skilllevel {
     text-align: right;
     font-weight: 600;
     padding-right: 0px;
-}
-
-.progress {
+  }
+  
+  .progress {
     border-radius: 0px;
     height: 15px;
     margin-top: 5px;
     background-color: #D6D6D6;
     margin-top: 5px;
     margin-bottom: 20px;
-}
-
-.progress .progress-bar {
+  }
+  
+  .progress .progress-bar {
     background-color: #CC4646;
-}
-
-.skillp {
+  }
+  
+  .skillp {
     color: #858585;
-}
-
-#cot1 {
+  }
+  
+  #cot1 {
     padding-left: 15px;
-}
-
-.col-sm-6 .row .col-md-8 {
+  }
+  
+  .col-sm-6 .row .col-md-8 {
     padding: 0 15px 0 15px;
-}
-
-/* Experience */
-#timeline {
+  }
+  
+  /* Experience */
+  #timeline {
     list-style: none;
     position: relative;
-}
-
-#timeline:before {
+  }
+  
+  #timeline:before {
     top: 0;
     bottom: 0;
     position: absolute;
@@ -182,14 +212,14 @@
     background-color: #CC4646;
     left: 50%;
     margin-left: -1.5px;
-}
-
-#timeline .clearFix {
+  }
+  
+  #timeline .clearFix {
     clear: both;
     height: 0;
-}
-
-#timeline .timeline-badge {
+  }
+  
+  #timeline .timeline-badge {
     color: #fff;
     width: 50px;
     height: 50px;
@@ -205,79 +235,78 @@
     border-top-left-radius: 50%;
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
-}
-
-#timeline .timeline-badge.timeline-future-movement {
+  }
+  
+  #timeline .timeline-badge.timeline-future-movement {
     background-color: #ffffff;
     height: 35px;
     width: 35px;
     font-size: 1.7em;
     top: -16px;
     margin-left: -18px;
-}
-
-#timeline .timeline-badge.timeline-future-movement a span {
+  }
+  
+  #timeline .timeline-badge.timeline-future-movement a span {
     color: #CC4646;
     font-size: .9em;
     top: 2px;
     left: 1px;
-}
-
-#timeline .timeline-movement {
+  }
+  
+  #timeline .timeline-movement {
     border-bottom: dashed 1px #CC4646;
     position: relative;
-}
-
-#timeline .timeline-movement.timeline-movement-top {
+  }
+  
+  #timeline .timeline-movement.timeline-movement-top {
     height: 60px;
-}
-
-#timeline .timeline-movement .timeline-item {
+  }
+  
+  #timeline .timeline-movement .timeline-item {
     padding: 60px 0;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel {
     border: 1px solid #d4d4d4;
     border-radius: 3px;
     background-color: #FFFFFF;
     color: #666;
     padding: 10px;
     position: relative;
-
+    
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     margin-left: 54px;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
     text-align: right;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
     color: #666;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
     color: #468c1f;
     font-size: 1.3em;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
     text-align: left;
-}
-
-#timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul span.importo {
+  }
+  
+  #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul span.importo {
     color: #e2001a;
     font-size: 1.3em;
-}
-
-/* portfolio */
-.isotopeWrapper article {
+  }
+  /* portfolio */
+  .isotopeWrapper article {
     margin-bottom: 30px;
   }
   
@@ -374,32 +403,35 @@
   #portfolio img {
     width: 94%;
   }
-
-/* contactUs */
-
-
-#contactUs {
-    padding: 60px 0;
+  
+  
+  
+  /* contactUs */
+  
+  
+  #contactUs {
+  
     background-color: #f0f0f0;
     align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.form-group {
+  }
+  
+  .form-group {
     padding-bottom: 15px;
-}
-
-/* footer */
-footer {
+  }
+  
+  /* footer */
+  footer {
     padding: 45px 0;
-}
-
-.social a:hover {
+  }
+  
+  .social a:hover {
     color: #c0392b;
-}
-
-.social a {
+  }
+  
+  .social a {
     padding: 0 10px;
     font-size: 32px;
     color: #c7c7c7;
-}
+  }
+  
